data/all_generated_tests/raw_wast_tests/br_StackCorruption_258.wast
;; 9. **Test 9: Branch Instructions with Type Mismatches**    - Instructions where `br` attempts to branch with incorrect types of operands or mismatches between branch arguments and destination block types.    - Constraint: Validate proper type enforcement and avoidance of stack corruption due to type mismatches.    - Stack Corruption Check: Ensure stack remains consistent even when type errors occur in branch instructions.

(assert_invalid
  (module
    (func $branch-type-mismatch
      (block (result i32)
        (br 0)
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)